src/renderer/style/main.scss
@import '~@mdi/font/css/materialdesignicons.css';
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
@import "./element-ui/index.scss";
@import "./tooltip.scss";

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Source Sans Pro', sans-serif;
    color: white;
}

.code {
    font-family: 'Source Code Pro', monospace;
}

.CodeMirror.CodeMirror-empty {
    color: #c0c4cc;
}

.tree-title {
    display: inline-flex;
    width: 100%;

    .spacer {
        flex-grow: 1;
    }
}

.muted {
    color: rgb(160, 160, 160);
}

.el-select.none input {
    font-style: italic;
    color: rgb(160, 160, 160)
}

.el-button {
    border: unset;
}

.el-button-group.block {
    width: 100%;
    display: flex;
    .el-button {
        flex-grow: 1;
    }
}

.remove-btn:hover {
    color: red;
}

//TODO: properly style dialogs
//custom style for dialog

.el-dialog {
    input,
    button {
        color: black;
    }
}

@keyframes fadeIn {
    from {
      opacity: 0;
    }
}

.morphing-collapse .el-collapse-item__content {
    transition: height 150ms linear;
    position: relative;
}

